# Desktop-Manager-CLI

./: flake.nix  meson.build
src/: main.cpp  meson.build
